--- a/lesson-2_quantization_techniques/exercise_2/solution/solution.ipynb
+++ b/lesson-2_quantization_techniques/exercise_2/solution/solution.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b0a5d0b5",
+   "metadata": {},
+   "source": [
+    "# Import Required Libraries\n",
+    "This cell:\n",
+    "- Imports standard libraries for file handling, timing, and mathematical operations.\n",
+    "- Imports PyTorch for deep learning operations.\n",
+    "- Imports NumPy for numerical computations.\n",
+    "- Imports Hugging Face Transformers for model and tokenizer handling.\n",
+    "- Imports Optimum Intel and Neural Compressor for quantization-aware training (QAT).\n",
+    "- Imports the `evaluate` library for evaluation metrics.\n",
+    "- Sets up the necessary modules for dataset loading and training."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "bb2b1242-8e58-4d60-82d1-3972b6186d76",
@@ -44,6 +60,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20bc82af",
+   "metadata": {},
+   "source": [
+    "# Define Settings and Constants\n",
+    "This cell:\n",
+    "- Defines the model name to be used for training and evaluation.\n",
+    "- Sets up a sample prompt for benchmarking latency and throughput.\n",
+    "- Defines a sample text for perplexity evaluation.\n",
+    "- Specifies the maximum number of tokens to generate during inference.\n",
+    "- Sets the output directory for saving the quantized model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "afdb9262-9057-474c-a135-fcf214fd5ba7",
@@ -68,6 +98,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6bc6dfe",
+   "metadata": {},
+   "source": [
+    "# Load Model and Tokenizer\n",
+    "This function:\n",
+    "- Loads the specified model using Hugging Face Transformers.\n",
+    "- Enables gradient checkpointing to save memory during training.\n",
+    "- Loads the tokenizer associated with the model.\n",
+    "- Ensures that the tokenizer has a pad token, setting it to the EOS token if missing.\n",
+    "- Returns the loaded model and tokenizer."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "6c3d52ef-d54d-416f-9ac9-68088d41f182",
@@ -87,6 +131,20 @@
     "    model.config.pad_token_id = tokenizer.pad_token_id\n",
     "\n",
     "    return model, tokenizer\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f04e1be",
+   "metadata": {},
+   "source": [
+    "# Prepare Datasets\n",
+    "This function:\n",
+    "- Loads the Wikitext-2 dataset for training and evaluation.\n",
+    "- Tokenizes the dataset and prepares labels for causal language modeling.\n",
+    "- Truncates and pads the tokenized data to a fixed block size.\n",
+    "- Selects a subset of the dataset for training and evaluation to keep the process lightweight.\n",
+    "- Returns the prepared training and evaluation datasets."
    ]
   },
   {
@@ -122,6 +180,21 @@
     "    eval_ds  = tokenized[\"validation\"].select(range(eval_size))\n",
     "\n",
     "    return train_ds, eval_ds\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aba91d35",
+   "metadata": {},
+   "source": [
+    "# Create INCTrainer for QAT\n",
+    "This function:\n",
+    "- Sets up training arguments for quantization-aware training (QAT).\n",
+    "  - Configures batch size, gradient accumulation, and optimizer.\n",
+    "  - Disables mid-training checkpoints to save space.\n",
+    "  - Enables mixed precision (FP16) if CUDA is available.\n",
+    "- Creates an INCTrainer instance with the specified model, tokenizer, and datasets.\n",
+    "- Returns the configured trainer."
    ]
   },
   {
@@ -163,6 +236,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea9409dd",
+   "metadata": {},
+   "source": [
+    "# Compute Perplexity Function\n",
+    "This function:\n",
+    "- Defines a closure to compute perplexity during evaluation.\n",
+    "- Calculates cross-entropy loss while ignoring padding tokens.\n",
+    "- Converts logits and labels to PyTorch tensors for loss computation.\n",
+    "- Returns the perplexity as an evaluation metric."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "75af9f3b-c3e2-406c-856d-a743aa5e2eed",
@@ -197,6 +283,19 @@
     "        # 6) Return perplexity\n",
     "        return {\"eval_perplexity\": torch.exp(loss).item()}\n",
     "    return compute_ppl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc71f7eb",
+   "metadata": {},
+   "source": [
+    "# Run QAT and Evaluate\n",
+    "This function:\n",
+    "- Trains the model using quantization-aware training (QAT).\n",
+    "- Evaluates the model on a small subset of the evaluation dataset.\n",
+    "- Computes perplexity using the `compute_metrics` function.\n",
+    "- Returns the evaluation metrics, including perplexity."
    ]
   },
   {
@@ -239,6 +338,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8433c9f5",
+   "metadata": {},
+   "source": [
+    "# Save and Load QAT Model\n",
+    "This function:\n",
+    "- Saves the quantized model to the specified output directory.\n",
+    "- Reloads the saved model as an INCModelForCausalLM.\n",
+    "- Returns the reloaded model for further evaluation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "c43f6335-f9fd-48c8-870d-df9a6da99969",
@@ -253,6 +364,18 @@
     "    loaded_model = INCModelForCausalLM.from_pretrained(output_dir)\n",
     "\n",
     "    return loaded_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96138f25",
+   "metadata": {},
+   "source": [
+    "# Measure Latency, Throughput, and Peak Memory\n",
+    "This function:\n",
+    "- Measures the latency and throughput of the model during text generation.\n",
+    "- Evaluates the peak GPU memory usage and perplexity for a given text.\n",
+    "- Returns the latency, throughput, peak memory usage, and perplexity."
    ]
   },
   {
@@ -292,6 +415,22 @@
     "    peak_mem_mib = torch.cuda.max_memory_allocated(device) / 1024**2\n",
     "    perplexity = math.exp(out.loss.item())\n",
     "    return peak_mem_mib, perplexity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8346a4e4",
+   "metadata": {},
+   "source": [
+    "# Main Execution Flow\n",
+    "This cell:\n",
+    "- Loads the model and tokenizer.\n",
+    "- Prepares the training and evaluation datasets.\n",
+    "- Configures QAT settings and creates a trainer.\n",
+    "- Runs QAT and evaluates the model's perplexity.\n",
+    "- Saves and reloads the quantized model.\n",
+    "- Benchmarks the quantized model for latency, throughput, and memory usage.\n",
+    "- Prints the final evaluation metrics and model size."
    ]
   },
   {
@@ -427,6 +566,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "51e9b0e2",
+   "metadata": {},
+   "source": [
+    "# Evaluate Perplexity on CPU\n",
+    "This function:\n",
+    "- Evaluates the perplexity of the model on a list of texts using CPU.\n",
+    "- Ignores padding tokens during loss computation.\n",
+    "- Returns the computed perplexity for the given texts."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "6f2adf24-e9bc-441f-b92e-badfaf9570b6",
@@ -460,9 +611,11 @@
    "id": "96a9f8a4-4e19-4a4d-923f-32c397c4c94b",
    "metadata": {},
    "source": [
-    "# Exercise 1 — Activation fake-quant sensitivity (CPU, per-layer, no training)\n",
-    "\n",
-    "Simulate QAT-style activation quantization one layer at a time with a forward pre-hook (8-bit symmetric per-tensor). Measure perplexity drift vs baseline."
+    "# Exercise 1 — Activation Fake-Quant Sensitivity (CPU, Per-Layer, No Training)\n",
+    "This exercise:\n",
+    "- Simulates QAT-style activation quantization for each layer using a forward pre-hook.\n",
+    "- Evaluates the impact of fake quantization on perplexity for each layer.\n",
+    "- Measures the perplexity drift compared to the baseline model."
    ]
   },
   {
@@ -532,6 +685,17 @@
     "\n",
     "    df = pd.DataFrame(rows).sort_values(\"delta_ppl\").reset_index(drop=True)\n",
     "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9485acd",
+   "metadata": {},
+   "source": [
+    "# Run Activation Fake-Quant Sensitivity Analysis\n",
+    "This cell:\n",
+    "- Runs the activation fake-quant sensitivity analysis for the last 8 linear layers.\n",
+    "- Outputs a DataFrame showing the perplexity drift for each layer."
    ]
   },
   {
@@ -665,9 +829,11 @@
    "id": "dc487708-4d5c-46c6-a651-75651328c833",
    "metadata": {},
    "source": [
-    "# Exercise 2 — CPU decoding strategy benchmark (no quant, no training)\n",
-    "\n",
-    "Benchmark latency & tokens/sec on CPU for common decoding setups (greedy / top-k / top-p / beam), across a few prompt lengths. Uses your model as-is; pure eval."
+    "# Exercise 2 — CPU Decoding Strategy Benchmark (No Quant, No Training)\n",
+    "This exercise:\n",
+    "- Benchmarks latency and throughput for different decoding strategies on CPU.\n",
+    "- Evaluates strategies such as greedy decoding, top-k sampling, top-p sampling, and beam search.\n",
+    "- Measures performance across various prompt lengths."
    ]
   },
   {
@@ -735,6 +901,17 @@
     "            })\n",
     "\n",
     "    return pd.DataFrame(rows).sort_values([\"prompt_len_tokens(approx)\", \"strategy\"]).reset_index(drop=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f175356d",
+   "metadata": {},
+   "source": [
+    "# Run CPU Decoding Strategy Benchmark\n",
+    "This cell:\n",
+    "- Runs the decoding strategy benchmark for prompt lengths of 16, 64, and 256 tokens.\n",
+    "- Outputs a DataFrame showing latency and throughput for each strategy."
    ]
   },
   {
