--- a/lesson-3_pruning_and_sparsity/demo-1/demo.ipynb
+++ b/lesson-3_pruning_and_sparsity/demo-1/demo.ipynb
@@ -10,22 +10,11 @@
     "\n",
     "This notebook:\n",
     "\n",
-    "1. Loads **LLaMA 3.2-Text-3B** in **FP32** (falls back to a public 1–3B-ish model if you don't have access).\n",
+    "1. Loads **TinyLlama/TinyLlama-1.1B-Chat-v1.0** in **FP32** (falls back to a public 1–3B-ish model if you don't have access).\n",
     "2. Applies **20% global magnitude pruning** across all `nn.Linear.weight` tensors via `torch.nn.utils.prune.global_unstructured`.\n",
     "3. **Removes** pruning reparameterizations so weights are *physically zeroed*.\n",
     "4. Converts every linear **weight** to **CSR sparse** and saves a compact checkpoint.\n",
     "5. Runs a tiny sanity generation before and after pruning.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "6ed0dac4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "!pip -q install transformers>=4.43.3 accelerate>=0.32.0 torch>=2.1 --extra-index-url https://download.pytorch.org/whl/cu121\n"
    ]
   },
   {
@@ -66,9 +55,8 @@
     "\n",
     "We try the following in order (first one you have access to will be used):\n",
     "\n",
-    "- `meta-llama/Llama-3.2-3B`\n",
-    "- `meta-llama/Llama-3.2-3B-Instruct`\n",
-    "- Fallbacks: `TinyLlama/TinyLlama-1.1B-Chat-v1.0`, `Qwen/Qwen2.5-1.5B-Instruct`\n"
+    "- `TinyLlama/TinyLlama-1.1B-Chat-v1.0`\n",
+    "- Fallbacks:  `Qwen/Qwen2.5-1.5B-Instruct`\n"
    ]
   },
   {
