--- a/lesson-3_pruning_and_sparsity/demo-2/demo.ipynb
+++ b/lesson-3_pruning_and_sparsity/demo-2/demo.ipynb
@@ -6,10 +6,11 @@
    "metadata": {},
    "source": [
     "# Multimodal Pruning + LoRA Recovery (T4 Demo)\n",
-    "**Model:** Qwen/Qwen2-VL-2B-Instruct (text+vision)  \n",
-    "**Pruning:** 30% attention heads _or_ 30% FFN channels (logical masking, shape-preserving)  \n",
-    "**Fine-tune:** LoRA on attention + MLP to recover accuracy  \n",
-    "**Eval:** Toy perplexity & a quick generation on colored squares\n"
+    "This notebook demonstrates:\n",
+    "- **Model:** Qwen/Qwen2-VL-2B-Instruct, a multimodal model for text and vision tasks.\n",
+    "- **Pruning:** Logical masking to prune 30% of attention heads or FFN channels.\n",
+    "- **Fine-tuning:** LoRA (Low-Rank Adaptation) applied to attention and MLP layers to recover accuracy.\n",
+    "- **Evaluation:** Toy perplexity and generation tasks on colored square images."
    ]
   },
   {
@@ -17,12 +18,17 @@
    "id": "e93cacff-c4e2-4cf0-829b-37efda9dc6d1",
    "metadata": {},
    "source": [
-    "# 1) Setup (Installs & GPU check)"
+    "# 1) Setup (Installs & GPU Check)\n",
+    "This cell:\n",
+    "- Sets up the environment for the notebook.\n",
+    "- Prints the versions of PyTorch, CUDA, and Python.\n",
+    "- Checks if a GPU is available and prints its name.\n",
+    "- Sets a random seed for reproducibility."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5aafe064-3225-4755-a37d-63c679060efb",
    "metadata": {},
    "outputs": [
@@ -36,8 +42,6 @@
     }
    ],
    "source": [
-    "!pip -q install \"transformers>=4.43.3\" \"accelerate>=0.32.0\" \"peft>=0.11.1\" \"datasets\" \"pillow\" \"torchvision\"\n",
-    "\n",
     "import os\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"   # or \"true\" if you prefer\n",
     "\n",
@@ -59,7 +63,16 @@
    "id": "b48e9413-d24c-4211-9477-1a8dcd4be7d0",
    "metadata": {},
    "source": [
-    "# 2) Imports & Config"
+    "# 2) Imports & Configuration\n",
+    "This cell:\n",
+    "- Imports libraries for image processing, model configuration, and training.\n",
+    "- Defines key configuration parameters:\n",
+    "  - `MODEL_NAME`: The name of the model to load.\n",
+    "  - `PRUNE_MODE`: The pruning strategy (attention heads or FFN channels).\n",
+    "  - `PRUNE_RATIO`: The percentage of components to prune.\n",
+    "  - `USE_FP32`: Whether to use FP32 precision (default is FP16 for T4 GPUs).\n",
+    "- Sets learning rate, batch size, and other training parameters.\n",
+    "- Creates an output directory for saving results."
    ]
   },
   {
@@ -126,7 +139,13 @@
    "id": "846c9d64-541d-4a19-9e68-b05c758655fc",
    "metadata": {},
    "source": [
-    "# 3) Load Model & Processor"
+    "# 3) Load Model & Processor\n",
+    "This cell:\n",
+    "- Loads the processor and configuration for the specified model.\n",
+    "- Defines a helper function to load the model with the desired precision (FP16 or FP32).\n",
+    "- Enables gradient checkpointing to save memory during training.\n",
+    "- Extracts key model dimensions such as hidden size, number of attention heads, and intermediate size.\n",
+    "- Prints the total number of parameters in the model."
    ]
   },
   {
@@ -200,7 +219,12 @@
    "id": "de685bf9-e5a4-41b9-9969-82df53e3acdb",
    "metadata": {},
    "source": [
-    "# 4) Module Finders (attention & MLP)"
+    "# 4) Module Finders (Attention & MLP)\n",
+    "This cell:\n",
+    "- Defines utility functions to locate specific modules in the model:\n",
+    "  - `find_attn_modules`: Finds attention modules with Q, K, V, and O projections.\n",
+    "  - `find_mlp_modules`: Finds MLP modules with gate, up, and down projections.\n",
+    "- These functions are used to identify modules for pruning and fine-tuning."
    ]
   },
   {
@@ -226,7 +250,12 @@
    "id": "1add055c-7d10-44e1-974a-19363a8c2291",
    "metadata": {},
    "source": [
-    "# 5) Pruning Utilities (Logical Masking)"
+    "# 5) Pruning Utilities (Logical Masking)\n",
+    "This cell:\n",
+    "- Implements pruning utilities for attention heads and FFN channels:\n",
+    "  - `prune_attention_heads_logical_gqa`: Prunes attention heads while maintaining GQA (Grouped Query Attention) constraints.\n",
+    "  - `prune_ffn_channels_logical_mask`: Prunes FFN channels by masking weights based on their norms.\n",
+    "- These functions apply logical masking to avoid altering the model's architecture."
    ]
   },
   {
@@ -339,7 +368,15 @@
    "id": "dd3f8871-d0e9-4084-b4ce-4c6b99514eaa",
    "metadata": {},
    "source": [
-    "# 6) Build a Tiny Multimodal Toy Dataset"
+    "# 6) Build a Tiny Multimodal Toy Dataset\n",
+    "This cell:\n",
+    "- Prepares a toy dataset using CIFAR-10 images and their labels.\n",
+    "- Resizes images to 448x448 pixels to match the model's input size.\n",
+    "- Creates training and validation datasets with a fixed number of examples.\n",
+    "- Each example includes:\n",
+    "  - An image.\n",
+    "  - A question (\"What is in this image?\").\n",
+    "  - The answer (e.g., \"cat\") with and without an EOS token."
    ]
   },
   {
@@ -390,6 +427,20 @@
     "train_items = make_examples(train_raw, N_TRAIN)\n",
     "val_items   = make_examples(test_raw,  N_VAL)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "546ae555",
+   "metadata": {},
+   "source": [
+    "# Encode Dataset for VQA\n",
+    "This cell:\n",
+    "- Encodes the dataset for visual question answering (VQA) tasks.\n",
+    "- Defines a function to tokenize and preprocess each example:\n",
+    "  - Constructs training and generation templates.\n",
+    "  - Masks labels to supervise only the answer tokens.\n",
+    "- Creates PyTorch datasets for training and validation."
    ]
   },
   {
@@ -478,6 +529,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03da2ec5",
+   "metadata": {},
+   "source": [
+    "# DataLoader with Collation\n",
+    "This cell:\n",
+    "- Defines a collation function to pad sequences and batch examples.\n",
+    "- Creates PyTorch DataLoaders for training and validation datasets.\n",
+    "- Ensures that all inputs (e.g., pixel values, input IDs) are properly batched."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "e1a1d002-6ac6-4dd0-84c9-ce3c83330fc4",
@@ -515,7 +578,11 @@
    "id": "a0e5b105-b7c3-4bdc-9625-95aa03689952",
    "metadata": {},
    "source": [
-    "# 7) Baseline Toy Perplexity"
+    "# 7) Baseline Toy Perplexity\n",
+    "This cell:\n",
+    "- Evaluates the model's perplexity on the training dataset before pruning.\n",
+    "- Defines a function to compute perplexity by averaging the loss over tokens.\n",
+    "- Evaluates the model's generation accuracy on the validation dataset."
    ]
   },
   {
@@ -544,45 +611,8 @@
     "        total_tokens += max(1, n_tokens)\n",
     "    model.train()\n",
     "    import math\n",
-    "    return math.exp(total_loss / max(1, total_tokens))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "22104830-6097-47e2-82b0-1fb494e6e921",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running quick baseline eval (pre-prune)...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.11/site-packages/transformers/generation/configuration_utils.py:631: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.01` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
-      "  warnings.warn(\n",
-      "/opt/conda/lib/python3.11/site-packages/transformers/generation/configuration_utils.py:636: UserWarning: `do_sample` is set to `False`. However, `top_p` is set to `0.001` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `top_p`.\n",
-      "  warnings.warn(\n",
-      "/opt/conda/lib/python3.11/site-packages/transformers/generation/configuration_utils.py:653: UserWarning: `do_sample` is set to `False`. However, `top_k` is set to `1` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `top_k`.\n",
-      "  warnings.warn(\n",
-      "/opt/conda/lib/python3.11/site-packages/transformers/generation/configuration_utils.py:698: UserWarning: `num_beams` is set to 1. However, `length_penalty` is set to `2.0` -- this flag is only used in beam-based generation modes. You should set `num_beams>1` or unset `length_penalty`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train PPL (pre-prune): 1531.34 | Val Gen@1 Acc (pre-prune): 0.00%\n"
-     ]
-    }
-   ],
-   "source": [
+    "    return math.exp(total_loss / max(1, total_tokens))\n",
+    "\n",
     "@torch.no_grad()\n",
     "def eval_gen_accuracy(model, processor, loader, k_samples=50, max_new_tokens=3):\n",
     "    model.eval()\n",
@@ -625,7 +655,12 @@
    "id": "ad22ff35-683f-4c99-a94a-2891c6b01896",
    "metadata": {},
    "source": [
-    "# 8) Apply Pruning (Pick mode via flag)"
+    "# 8) Apply Pruning (Pick Mode via Flag)\n",
+    "This cell:\n",
+    "- Applies pruning to the model based on the selected mode (`PRUNE_MODE`):\n",
+    "  - `attn_heads`: Prunes attention heads.\n",
+    "  - `ffn_channels`: Prunes FFN channels.\n",
+    "- Evaluates the model's perplexity after pruning but before fine-tuning."
    ]
   },
   {
@@ -670,7 +705,12 @@
    "id": "e4c2ff37-4de5-41a5-96e2-12a8f33b4096",
    "metadata": {},
    "source": [
-    "# 9) LoRA Setup (attention + MLP targets)"
+    "# 9) LoRA Setup (Attention + MLP Targets)\n",
+    "This cell:\n",
+    "- Identifies target modules for LoRA (Low-Rank Adaptation).\n",
+    "- Configures LoRA parameters such as rank, alpha, and dropout.\n",
+    "- Wraps the model with LoRA layers for fine-tuning.\n",
+    "- Prints the number of trainable parameters after applying LoRA."
    ]
   },
   {
@@ -716,7 +756,12 @@
    "id": "e14fb020-5a7e-4103-959f-f45a20a379d6",
    "metadata": {},
    "source": [
-    "# 10) Tiny Fine-Tune Loop (Mixed Precision)"
+    "# 10) Tiny Fine-Tune Loop (Mixed Precision)\n",
+    "This cell:\n",
+    "- Implements a fine-tuning loop with mixed precision (FP16).\n",
+    "- Uses gradient accumulation to simulate a larger batch size.\n",
+    "- Updates the optimizer and learning rate scheduler after each step.\n",
+    "- Prints the loss at each step for monitoring."
    ]
   },
   {
@@ -885,7 +930,11 @@
    "id": "3bfc34a4-650c-4636-9273-97047de39d11",
    "metadata": {},
    "source": [
-    "# 11) Evaluate After LoRA & Save Artifacts"
+    "# 11) Evaluate After LoRA & Save Artifacts\n",
+    "This cell:\n",
+    "- Evaluates the model's perplexity and generation accuracy after fine-tuning.\n",
+    "- Saves the LoRA adapter and the merged model to disk.\n",
+    "- Prints the paths to the saved artifacts."
    ]
   },
   {
@@ -927,7 +976,11 @@
    "id": "a14cd495-8c0b-4dfe-b2f8-23e852a05459",
    "metadata": {},
    "source": [
-    "# 12) Quick Inference Demo (Visual QA)"
+    "# 12) Quick Inference Demo (Visual QA)\n",
+    "This cell:\n",
+    "- Demonstrates the model's ability to answer visual questions after fine-tuning.\n",
+    "- Defines a function to generate answers for images and questions.\n",
+    "- Runs the model on a few examples from the validation dataset and prints the predictions."
    ]
   },
   {
@@ -1023,7 +1076,9 @@
    "id": "67dea553-441f-4319-a4f3-3bcc2f8c024f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Empty cell for additional code or notes."
+   ]
   },
   {
    "cell_type": "code",
@@ -1031,7 +1086,9 @@
    "id": "eedb5787-de0d-41d1-bac8-556a052a5809",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Empty cell for additional code or notes."
+   ]
   }
  ],
  "metadata": {
